--- a/base-project/en.lproj/MainStoryboard.storyboard
+++ b/base-project/en.lproj/MainStoryboard.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="dAO-1S-90r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2840" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="dAO-1S-90r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1926"/>
     </dependencies>
     <scenes>
-        <!--Just Sayin View Controller - Hollagram-->
+        <!--Just Sayin View Controller - Holla-->
         <scene sceneID="4bN-iK-sAq">
             <objects>
                 <viewController id="1jM-qF-pXu" customClass="JustSayinViewController" sceneMemberID="viewController">
@@ -47,7 +47,8 @@
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="hMr-3j-c3k">
                                         <rect key="frame" x="20" y="12" width="280" height="104"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="textColor" red="0.67235331632653061" green="0.67235331632653061" blue="0.67235331632653061" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no"/>
                                     </textView>
@@ -57,8 +58,8 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Just Sayin" id="cMf-eF-WxE"/>
-                    <navigationItem key="navigationItem" title="Hollagram" id="bb5-WJ-zIY"/>
+                    <tabBarItem key="tabBarItem" title="Holla" id="cMf-eF-WxE"/>
+                    <navigationItem key="navigationItem" title="Holla" id="bb5-WJ-zIY"/>
                     <connections>
                         <outlet property="messageField" destination="hMr-3j-c3k" id="dGJ-De-S2h"/>
                         <outlet property="usernameField" destination="ZQi-cp-743" id="JF4-I4-bKz"/>
@@ -121,11 +122,11 @@
             </objects>
             <point key="canvasLocation" x="-537" y="109"/>
         </scene>
-        <!--Navigation Controller - Just Sayin-->
+        <!--Navigation Controller - Holla-->
         <scene sceneID="B1M-HE-yht">
             <objects>
                 <navigationController definesPresentationContext="YES" id="uyl-ud-EOA" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Just Sayin" id="iy8-Sb-prP"/>
+                    <tabBarItem key="tabBarItem" title="Holla" id="iy8-Sb-prP"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Qtg-YS-9T1">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -137,7 +138,7 @@
             </objects>
             <point key="canvasLocation" x="-19" y="753"/>
         </scene>
-        <!--No Whisper View Controller - Hollagram-->
+        <!--No Whisper View Controller - Whispers-->
         <scene sceneID="BTF-A4-uJP">
             <objects>
                 <viewController id="fuw-7L-K1T" customClass="NoWhisperViewController" sceneMemberID="viewController">
@@ -184,7 +185,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Whispers" id="Qbl-32-4oh"/>
-                    <navigationItem key="navigationItem" title="Hollagram" id="DVE-lm-wdF"/>
+                    <navigationItem key="navigationItem" title="Whispers" id="DVE-lm-wdF"/>
                     <connections>
                         <outlet property="myTableView" destination="154-3Q-g7E" id="7Ew-4Y-Tsx"/>
                         <outlet property="myView" destination="IQE-ba-ANq" id="Ft1-F9-1f7"/>
@@ -381,7 +382,7 @@
             </objects>
             <point key="canvasLocation" x="1296" y="765"/>
         </scene>
-        <!--Shout View Controller - Hollagram-->
+        <!--Shout View Controller - Shouts-->
         <scene sceneID="Ffh-vo-NB1">
             <objects>
                 <tableViewController id="SMA-i0-CMM" customClass="ShoutViewController" sceneMemberID="viewController">
@@ -426,7 +427,7 @@
                         </connections>
                     </tableView>
                     <tabBarItem key="tabBarItem" title="Shouts" id="AuH-9Q-OL9"/>
-                    <navigationItem key="navigationItem" title="Hollagram" id="cbV-r5-FCr"/>
+                    <navigationItem key="navigationItem" title="Shouts" id="cbV-r5-FCr"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZKV-Mj-7td" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -470,6 +471,11 @@
         </class>
         <class className="ShoutViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ShoutViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="openLogin:"/>
+                <relationship kind="action" name="submitLogout:"/>
+                <relationship kind="action" name="submitRefresh:"/>
+            </relationships>
         </class>
         <class className="SignupViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SignupViewController.h"/>
